Fix CI for JDK 17+
The `--add-exports=` flags are required after https://openjdk.org/jeps/396

Related to https://github.com/google/compile-testing/issues/222

RELNOTES=n/a
PiperOrigin-RevId: 592675658